# explorer

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  rust-toolchain.toml  selendra.yaml
.github/workflows/: node.js.yml  rust.yml  workflows.yml
api/: Cargo.toml  README.md
api/modules/error/: Cargo.toml
api/modules/error/src/: lib.rs
api/modules/models/: Cargo.toml
api/modules/models/src/: account.rs  block.rs  lib.rs  page.rs
api/modules/operation/: Cargo.toml
api/modules/operation/src/: account.rs  block.rs  lib.rs  utils.rs
api/src/: main.rs  utils.rs
api/src/handlers/: account.rs  account_handler.rs  block.rs  event.rs  extrinsic.rs  log.rs  mod.rs  runtime.rs  staking.rs  total.rs  transfer.rs
api/src/models/: account.rs  block.rs  event.rs  extrinsic.rs  log.rs  mod.rs  total.rs
api/src/state/: app_state.rs
api/src/utils/: address.rs  mod.rs  pagination.rs
archive-service/: .env.example  Cargo.toml
archive-service/src/: archive_state.rs  command.rs  main.rs  setup_db.rs
archive-service/src/models/: account.rs
archive-service/src/service/: evm.rs  mod.rs  substrate.rs
backend/: package-lock.json  package.json
backend/src/: config.js  index.js
backend/src/crawler/: activeAccount.js  blockHarvester.js  havestAccount.js  havestblock.js  stakingRank.js
backend/src/operations/: account.js  block.js  event.js  staking.js  staking_event.js  staking_rm.js  transfer.js
backend/src/operatons/: account.js  block.js  event.js  extrinsic.js  log.js  runtime.js  stakinfg_event.js  staking.js  staking_event.js  transfer.js
backend/src/utils/: apiProvider.js  covert_ss58.js  dbClient.js  index.js
config/: Cargo.toml
config/src/: lib.rs
crawler/: .env.example  .eslintrc.json  README.md  package.json  tsconfig.json
crawler/.github/workflows/: workflows.yml
crawler/src/: config.ts  index.ts  pool.ts  validator.ts
crawler/src/config/: index.ts
crawler/src/crawler/: block.ts  transfer.ts
crawler/src/crud/: block.ts  event.ts  evmEvent.ts  extrinsic.ts  index.ts  tokenHoldes.ts
crawler/src/pool/: index.ts
crawler/src/process/: block.ts  index.ts
crawler/src/process/Log/: index.ts
crawler/src/process/block/: index.ts
crawler/src/process/block/extrinsic/: Extrinsic.ts  index.ts
crawler/src/process/block/log/: index.ts
crawler/src/process/extrinsic/: Extrinsic.ts
crawler/src/process/extrinsic/event/: ClaimEvmAccountEvent.ts  DefaultEvent.ts  KillAccountEvent.ts  SignerAddressCapture.ts  StakingEvent.ts  index.ts
crawler/src/process/managers/: AccountManager.ts  index.ts
crawler/src/process/validator/: db.ts  index.ts  types.ts  utils.ts
crawler/src/queries/: block.ts  event.ts  evmEvent.ts  extrinsic.ts  tokenHoldes.ts
crawler/src/types/: crawler.ts  index.ts
crawler/src/utils/: NodeProvider.ts  connector.ts  crawler.ts  index.ts  logger.ts  utils.ts
crawler_old/: package.json
crawler_old/src/: backtracking.ts  config.ts  pool.ts
crawler_old/src/crawler/: tokenHolder.ts
crawler_old/src/crawlerv2/managers/: AccountManager.ts
db/: Cargo.toml  README.md
db/hasura/metadata/databases/: databases.yaml
db/hasura/migrations/selendraexplorer/1645527971414_init/: up.sql
db/hasura/migrations/selendraexplorer/1660792118476_init/: up.sql
db/hasura/migrations/selendraexplorer/1660793364528_pool/: up.sql
db/hasura/migrations/selendraexplorer/1661155765489_block_logs/: down.sql  up.sql
db/hasura/migrations/selendraexplorer/1661155765490_block_logs/: up.sql
db/hasura/migrations/selendraexplorer/1661309657376_validator/: down.sql  up.sql
db/hasura/migrations/selendraexplorer/1661497920071_totalIssuance/: up.sql
db/src/: db.rs  lib.rs  setup_db.rs
db/src/models/: account.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: AccountsTable.js  AllDataInfo.js  BlocksTable.js  EventsTable.js  ExtrinsicsTable.js  Footer.js  Header.js  Loading.js  LogsTable.js  NotFound.js  Search.js  SideHeader.js  TableAccountStaking.js  TableStaking.js  TransferTable.js  chart.js
frontend/src/components/Overview/: BlockNumber.js  DataField.js  DataFieldStack.js  index.js
frontend/src/constants/: selendra.js
frontend/src/context/: APIContext.js
frontend/src/hooks/: useFetch.js
frontend/src/pages/: accounts.js  events.js  home.js  staking.js  transfers.js
frontend/src/pages/accounts/: accountDetail.js  index.js
frontend/src/pages/blocks/: blockDetail.js  index.js
frontend/src/pages/extrinsics/: extrinsicDetail.js  index.js
frontend/src/pages/staking/: index.js  validatorDetail.js
frontend/src/pages/transfers/: index.js  transferDetail.js
frontend/src/styles/: index.css
frontend/src/utils/: calcInflation.js  index.js
indexer-service/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json
indexer-service/src/: config.ts
indexer-service/src/interfaces/: index.ts
indexer-service/src/utils/: db.ts  logger.ts
rust-client/: Cargo.toml
rust-client/src/: lib.rs  main.rs  utils.rs
rust-client/src/chain_state/: evm.rs  mod.rs  substrate.rs
rust-client/src/chain_state/evm/: evm.rs  mod.rs
rust-client/src/chain_state/evm/contracts/: abi.rs  erc20.rs  mod.rs  types.rs
rust-client/src/chain_state/evm/contracts/types/: erc_contract.rs  governance.rs  mod.rs  proxy.rs
rust-client/src/models/: account.rs  block.rs  contract.rs  event.rs  extrinsic.rs  gas.rs  identity.rs  mod.rs  staking.rs
scripts/: healthcheck.sh  init.sh  setup.sh
selendra-sdk/: .eslintrc.js  .prettierrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json
selendra-sdk/src/: api.ts  index.ts
selendra-sdk/src/block/: evm.ts  index.ts  substrate.ts
selendra-sdk/src/chain_state/: evm.ts  index.ts  substrate.ts
selendra-sdk/src/interface/: index.ts
selendra-sdk/src/utils/: index.ts
swagger-ui/: package-lock.json
swagger-ui/dev-helpers/: dev-helper-initializer.js
swagger-ui/swagger-ui-dist-package/: index.js
(+17 files in other folders)
