[workspace]
members = [
    "rust-client",
    "archive-service",
    "db",
    "api"
]

resolver = "2"
[profile.release]
panic = "unwind"

[workspace.package]
authors = ["Selendra"]
edition = "2021"
repository = "https://github.com/selendra/explorer"

[workspace.dependencies]
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "time", "signal"] }
codec = { package = "parity-scale-codec", version = "3.6.1", features = ['derive'] }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
validator = { version = "0.19.0", features = ["derive"] }
surrealdb = { version = "2.0.4" }
tracing-subscriber = "0.3.18"
serde_json = "1.0.133"
env_logger = "0.11.5"
lazy_static = "1.5.0"
tokio-util = "0.7.8"
once_cell = "1.20.2"
actix-web = "4.9.0"
futures = "0.3.28"
tracing = "0.1.40"
dotenv = "0.15.0"
anyhow = "1.0.93"
ethers = "2.0.14"
rayon= "1.10.0"
rand = "0.8.5"
log = "0.4.22"
hex = "0.4.3" 

# Selendra dependencies
sp-core = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sp-runtime = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sp-staking = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
frame-support = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
frame-system = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
pallet-balances = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
pallet-staking = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
pallet-session = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
pallet-identity = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
substrate-api-client = { git = "https://github.com/selendra/substrate-api-client.git", branch = "selendra", default-features = false, features = ["jsonrpsee-client"] }
selendra-runtime = { git = "https://github.com/selendra/selendra", tag = "v2.0.0" }
selendra-primitives = { git = "https://github.com/selendra/selendra", tag = "v2.0.0" }

# Local dependencies
selendra-rust-client = { path = "rust-client"}
selendra-db = { path = "db"}



