[package]
name = "explorer-api"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
actix-web = { workspace = true }
validator = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true } 
log = { workspace = true }

selendra-db = { workspace = true }
selendra-rust-client = { workspace = true }
selendra-config = { workspace = true }
