[package]
name = "archive-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
surrealdb = { version = "2.0.4", features = ["kv-rocksdb"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
dotenv = "0.15"
anyhow = "1.0"
rand = "0.8.5"


selendra-rust-client = { path = "../rust-client"}