[package]
name = "archive-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
surrealdb = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
rust_decimal = { workspace = true }

selendra-rust-client = { workspace = true }
substrate-api-client = { workspace = true }
selendra-db = { workspace = true }
selendra-config = { workspace = true }