[package]
name = "selendra-db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
surrealdb = { version = "2.0.4" }
tracing-subscriber = "0.3.18"
serde_json = "1.0.133"
tracing = "0.1.40"
anyhow = "1.0.93"
uuid = "1.11.0"
