[package]
name = "selendra-db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
surrealdb = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }


selendra-config = { workspace = true }