[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = { version = "1.0.79" }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
tokio-util = "0.7.8"
futures = "0.3.28"
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "time"] }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", branch = "release-polkadot-v1.6.0", default-features = false, features = ["jsonrpsee-client"] }
