[package]
name = "selendra-rust-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { workspace = true }
codec = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-staking = { workspace = true }
pallet-session = { workspace = true }
pallet-identity = { workspace = true }
substrate-api-client = { workspace = true }
selendra-runtime = { workspace = true }
selendra-primitives = { workspace = true }


